infra/kubernetes/dev/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    app: server
spec:
  selector:
    matchLabels:
      app: server
  replicas: 1
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: jimmypaolini/lexico-server:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
---
kind: Service
apiVersion: v1
metadata:
  name: server
  labels:
    app: server
spec:
  type: ClusterIP
  ports:
    - port: 3001
  selector:
    app: server
