infra/kubernetes/dev/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  selector:
    matchLabels:
      app: web
  replicas: 1
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: jimmypaolini/lexico-web:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: web
  labels:
    app: web
spec:
  type: ClusterIP
  ports:
    - port: 3000
  selector:
    app: web
